syntax = "proto3";

option csharp_namespace = "mShop.Discount.Grpc.Protos";


service DiscountProtoService{
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc InsertDiscount(InsertDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel {
	int32 id  = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetDiscountRequest{
	int32 productId = 1;
}

message InsertDiscountRequest{
	CouponModel coupon = 1;
}

message UpdateDiscountRequest{
	CouponModel coupon = 1;
}

message DeleteDiscountRequest{
	int32 productId = 1;
}

message DeleteDiscountResponse{
	bool success = 1;
}